<resources>

    <string name="app_name">News</string>

    <string name="tab_home">首页</string>
    <string name="tab_recom">推荐</string>
    <string name="tab_micro">微头条</string>
    <string name="tab_me">我的</string>

    <string name="comment">评论</string>
    <string name="img_unit">图</string>

    <string name="no_news_now">目前没有最新新闻了</string>

    <string name="refresh_pull_down_text">下拉推荐</string>
    <string name="refresh_release_text">松开推荐</string>
    <string name="refresh_ing_text">推荐中</string>

    <string name="detail_write_comment">写评论…</string>
    <string name="focus">关注</string>

    <string name="net_error">网络异常，请检查后重试</string>
    <string name="write_storage_permission_deny">保存失败，SD卡写入权限被拒绝</string>

    <string name="search_you_want_to_search">搜你想搜的</string>
    <string name="to_top">置顶</string>
    <string name="hot">热</string>
    <string name="ad">广告</string>
    <string name="tag_movie">影视</string>
    <string name="net_unavailable">网络不可用</string>
    <string name="net_error_msg">网络不给力</string>

    <string name="dynamic">动态</string>
    <string name="fans">粉丝</string>
    <string name="week_visitor">7天访客</string>

    <string name="collect">收藏</string>
    <string name="history">历史</string>
    <string name="like">点赞</string>

    <string name="message_inform">消息通知</string>

    <string name="mall">头条商城</string>
    <string name="mall_bonus">邀请好友得200元现金奖励</string>

    <string name="JD">京东特供</string>
    <string name="JD_bonus">新人领188元红包</string>

    <string name="provide_news">我要爆料</string>
    <string name="feed_back">用户反馈</string>
    <string name="settings">系统设置</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
</resources>
