<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.hzx.news.ui.uikit.HeaderZoomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--头部背景-->
            <ImageView
                android:id="@+id/iv_bg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@mipmap/mine_head_bg" />

            <!--头部用户信息-->
            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_count"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cv_profie"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/profile" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="未登录"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />

                <ImageView
                    android:id="@+id/iv_to_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@mipmap/right_arrow" />


            </LinearLayout>

            <!--头部动态、粉丝、7天访客-->
            <LinearLayout
                android:id="@+id/ll_count"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_bg"
                android:layout_marginTop="18.0dip"
                android:layout_marginBottom="23.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/dynamic"
                        android:textColor="@color/white"
                        android:textSize="12.0sp" />

                </LinearLayout>

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="38.0dip"
                    android:background="@color/color_1affffff" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/fans"
                        android:textColor="@color/white"
                        android:textSize="12.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="38.0dip"
                    android:background="@color/color_1affffff" />

            </LinearLayout>

            <!--内容-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_count"
                android:orientation="vertical">

                <!--收藏、历史、夜间-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_collect"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/my_collect"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/collect"
                        android:textColor="@color/color_222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_history"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/my_history"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/history"
                        android:textColor="@color/color_222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_like"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/mine_like"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/like"
                        android:textColor="@color/color_222222"
                        android:textSize="12sp" />

                </LinearLayout>

                <View style="@style/MineFunctionDivider" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F3F5F4" />

                <View style="@style/MineFunctionDivider" />

                <!--消息通知-->
                <RelativeLayout style="@style/MineFunctionRl">

                    <TextView
                        android:id="@+id/tv_message"
                        style="@style/MineFunctionTvLeft"
                        android:text="@string/message_inform"
                        android:textColor="@color/color_222222" />

                    <ImageView
                        android:id="@+id/iv_message"
                        style="@style/MineFunctionArrow"
                        android:background="@mipmap/setting_arrow" />

                </RelativeLayout>

                <View style="@style/MineFunctionDivider" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F3F5F4" />

                <!--<View-->
                <!--style="@style/MineFunctionDivider"-->
                <!--/>-->

                <!--&lt;!&ndash;头条商城&ndash;&gt;-->
                <!--<RelativeLayout-->
                <!--style="@style/MineFunctionRl"-->
                <!--&gt;-->

                <!--<TextView-->
                <!--style="@style/MineFunctionTvLeft"-->
                <!--android:text="@string/mall"-->
                <!--android:textColor="@color/color_222222"-->
                <!--/>-->

                <!--<ImageView-->
                <!--android:id="@+id/iv_mall_arrow"-->
                <!--style="@style/MineFunctionArrow"-->
                <!--android:background="@mipmap/setting_arrow"-->
                <!--/>-->

                <!--<TextView-->
                <!--style="@style/MineFunctionTvRight"-->
                <!--android:layout_toLeftOf="@+id/iv_mall_arrow"-->
                <!--android:text="@string/mall_bonus"/>-->

                <!--</RelativeLayout>-->

                <View
                    style="@style/MineFunctionDivider"
                    android:layout_marginLeft="15dp" />

                <!--<View-->
                <!--style="@style/MineFunctionDivider"-->
                <!--/>-->

                <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="10dp"-->
                <!--android:background="@color/color_F3F5F4"-->
                <!--/>-->

                <!--<View-->
                <!--style="@style/MineFunctionDivider"-->
                <!--/>-->

                <!--<View-->
                <!--android:layout_marginLeft="15dp"-->
                <!--style="@style/MineFunctionDivider"-->
                <!--/>-->

                <!--用户反馈-->
                <RelativeLayout style="@style/MineFunctionRl">

                    <TextView
                        style="@style/MineFunctionTvLeft"
                        android:text="@string/feed_back"
                        android:textColor="@color/color_222222" />

                    <ImageView
                        style="@style/MineFunctionArrow"
                        android:background="@mipmap/setting_arrow" />

                </RelativeLayout>

                <View
                    style="@style/MineFunctionDivider"
                    android:layout_marginLeft="15dp" />

                <!--系统设置-->
                <RelativeLayout style="@style/MineFunctionRl">

                    <TextView
                        android:id="@+id/tv_setting"
                        style="@style/MineFunctionTvLeft"
                        android:text="@string/settings"
                        android:textColor="@color/color_222222" />

                    <ImageView
                        android:id="@+id/iv_setting"
                        style="@style/MineFunctionArrow"
                        android:background="@mipmap/setting_arrow" />

                </RelativeLayout>

                <View style="@style/MineFunctionDivider" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F3F5F4" />

            </LinearLayout>

        </RelativeLayout>

    </com.hzx.news.ui.uikit.HeaderZoomLayout>

</LinearLayout>
